envoy.yaml
# This config has Envoy listen on localhost:18000, responding to any requests with static content "hello from server".
# In addition, the example wasm plugin to validate the requests payload runs.
# The plugin intercepts the request and makes Envoy return 403 instead of the static content
# if the request has no JSON payload or the payload JSON doesn't have "id" or "token" keys.
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: employees_service
                        - match:
                            prefix: "/employees"
                          route:
                            cluster: employees_service

                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: "test"
                          vm_config:
                            runtime: "envoy.wasm.runtime.v8"
                            environment_variables:
                              host_env_keys:
                                - JOB_TYPE
                                - CLIENT_ID
                                - CLIENT_SECRET
                                - API_KEY
                                - RESTRICTED_TEXT
                                - MANIFEST_NAME
                                - PROTECT_NULL_VALUES
                                - PRESERVE_STRING_LENGTH

                            code:
                              local:
                                filename: "./main.wasm"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: interceptor_service
      connect_timeout: 2s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: interceptor_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      protocol: TCP
                      address: "api.exate.co"
                      port_value: 443

    - name: employees_service
      connect_timeout: 0.5s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9999

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
